assets/css/screen.css
/* ... */
/* 6.4. Reusable utilities
/* ---------------------------------------------------------- */

.gh-styled-section-header-container {
    margin-top: 5vh;
}

.gh-styled-section-header-border-wide {
    border-top: 1px solid var(--color-black);
    width: 300px;
    margin-bottom: 2vh;
}

.gh-styled-section-header-border-narrow {
    border-top: 1px solid var(--color-black);
    width: 160px;
    margin-top: 1vh;
}

.gh-styled-section-header-content {
    display: flex;
    flex-direction: row;
    height: fit-content;
    margin-left: calc(var(--viewport-margin-left) + max(4vmin, 20px));
    gap: 1vw;
    align-items: center;
}

.gh-styled-section-header-ellipse svg {
    height: 35px;
    width: auto;
    display: block;
}

.gh-header-text-tall-upper {
    font-weight: 700;
    text-transform: uppercase;
    transform: scaleY(1.4);
    transform-origin: top;
    margin: 1vh 0 calc(1vh + 0.4em) 0;
    /* padding-bottom: 1vh; */
    padding-bottom: 1em;
}

@media (max-width: 767px) {
    .gh-header-text-tall-upper  {
        padding-bottom: 0;
    }
}

.gh-header-text-tag-list-item {
    font-size: large;
}

li .gh-header-text-recent-post-list {
    font-weight: 700;
    text-transform: uppercase;
    transform-origin: top;
    line-height: 110%;
    transform: scaleY(1.2);
}

li:nth-child(1) .gh-header-text-recent-post-list {
    margin: -0.1em 0 0.4em 0;
}

li:nth-child(n+2) .gh-header-text-recent-post-list {
    margin: 0;
}

.gh-header-text-tall {
    font-weight: 700;
    /* text-transform: uppercase; */
    transform: scaleY(1.4);
    transform-origin: top;
    margin-bottom: 0.4em;
}

.gh-header-text-serif {
    font-family: var(--font-aujournuit) !important;
    transform: scaleY(1.1);
    transform-origin: top;
    margin: 1vh auto calc(1vh + 0.1em) auto;
    /* margin-bottom: 0.1em; */
    font-weight: 400;
}

.gh-recent-post-list .gh-header-text-serif {
    font-size: x-large;
    font-weight: 500;
}

.gh-styled-section-header-text-serif {
    font-family: var(--font-aujournuit);
    font-size: 4rem;
    transform: scaleY(1.1);
    transform-origin: top;
    margin-bottom: 0.1em;
    font-weight: 400;
}

.gh-text-post-attributes {
    font-family: var(--font-archivo-narrow);
    font-style: italic;
    font-weight: 300;
    color: var(--color-secondary-text);
}

.gh-post-attribute-date-buffered {
    margin-top: 1vh;
}

.gh-text-post-attributes-black {
    color: var(--color-black);
    font-style: normal;
    margin-right: 0.25em;
}

/* 7. Latest Post
/* ---------------------------------------------------------- */

.gh-latest-post-inner {
    display: flex;
    flex-direction: column;
    /* gap: var(--grid-gap); */
    align-items: flex-start;
    background: var(--color-gradient);
    padding: 3vh 3vw;
    margin: 5vh 0 ;
    /* border-right: 1px solid var(--color-black); */
    /* border-bottom: 1px solid var(--color-black); */

}

.gh-latest-post-inner-header-row {
    display: flex;
    flex-direction: row;
    width: 100%;
    gap: var(--grid-gap);
    align-items: flex-start;
    justify-content: space-between;
    margin-bottom: 0;
}

.gh-latest-post-inner-body {
    display: flex;
    flex-direction: row;
    width: 100%;
    gap: var(--grid-gap);
    align-items: flex-start;
    margin-top: 0;
}

.gh-latest-post-left {
    /* flex: 1; */
    display: flex;
    flex-direction: column;
    /* gap: 1vh; */
}

.gh-latest-post-right {
    flex: 2;
    display: flex;
    flex-direction: column;
    /* gap: 16px; */
}

.gh-latest-post-figure {
    margin: 0;
}

.gh-latest-post-image {
    width: 100%;
    height: auto;
    display: block;
}

@media (max-width: 767px) {
    .gh-latest-post-inner-body {
        flex-direction: column-reverse;
        gap: 0;
    }
}

/* 7.1. Post Card Group
/* ---------------------------------------------------------- */

.gh-post-card-group-inner {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.gh-post-card-group-feed {
    display: flex;
    flex-direction: row;
    /* gap: var(--grid-gap); */
    align-items: flex-start;
    list-style: none;
    padding: 0;
}

.gh-post-card-group-feed > li {
    flex: 1;
    min-width: 0;
}

@media (max-width: 767px) {
    .gh-post-card-group-feed {
        flex-direction: column;
    }
}

.gh-post-card-group-item {
    display: flex;
    flex-direction: column;
    /* border-left: 1px solid var(--color-black); */
    /* border-right: 1px solid var(--color-black); */
    /* border-bottom: 1px solid var(--color-black); */
    /* background-color: var(--color-light-gray); */
    padding: 1vh 1vw;
    /* gap: 2vh; */
    /* background: linear-gradient(white, var(--color-lighter-gray)); */
}

.gh-post-card-group-tag {
    text-align: right;
}

.gh-post-card-group-figure {
    flex: 0 0 auto;
    margin: 0;
    width: auto;
}

.gh-post-card-group-image {
    width: 100%;
    height: auto;
    /* display: block; */
    /* object-fit: cover; */
    /* aspect-ratio: 5/3; */
    /* padding-top: 1vh; */
    /* border-top: 1px solid var(--color-black); */

}

/* 7.2. Recent Post List
/* ---------------------------------------------------------- */

.gh-recent-post-list-items {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
}

.gh-recent-post-list-item {
    display: flex;
    flex-direction: column;
    /* gap: 16px; */
}

.gh-recent-post-list-row {
    display: flex;
    flex-direction: row;
    width: 100%;
    /* align-items: flex-start; */
    gap: 1vw;
    /* justify-content: space-between; */
}

.gh-recent-post-list-content {
    /* flex: 1; */
    /* min-width: 0; */
    display: flex;
    flex-direction: column;
    height: fit-content;
    gap: 1vh;
    margin-bottom: 1vh;
}

.gh-recent-post-list-figure {
    flex: 0 0 auto;
    margin: 0;
    width: auto;
}
/* ... */

